Building site for 1.0-SNAPSHOT

--- a/jbehave/view/reports.html
+++ b/jbehave/view/reports.html
@@ -134,9 +134,9 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.002</span></td>
+<span class="">00:00:00.001</span></td>
 <td>
-<a href="BeforeStories.stats.html">stats</a> |<a href="BeforeStories.xml.html">xml</a> |<a href="BeforeStories.html">html</a> |<a href="BeforeStories.txt.html">txt</a>
+<a href="BeforeStories.stats.html">stats</a> |<a href="BeforeStories.html">html</a> |<a href="BeforeStories.xml.html">xml</a> |<a href="BeforeStories.txt.html">txt</a>
 </td>
 </tr>
 <tr>
@@ -176,9 +176,9 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.045</span></td>
+<span class="">00:00:00.029</span></td>
 <td>
-<a href="jbehave.example.stack.StackSzenario.stats.html">stats</a> |<a href="jbehave.example.stack.StackSzenario.html">html</a> |<a href="jbehave.example.stack.StackSzenario.xml.html">xml</a> |<a href="jbehave.example.stack.StackSzenario.txt.html">txt</a>
+<a href="jbehave.example.stack.StackSzenario.stats.html">stats</a> |<a href="jbehave.example.stack.StackSzenario.xml.html">xml</a> |<a href="jbehave.example.stack.StackSzenario.html">html</a> |<a href="jbehave.example.stack.StackSzenario.txt.html">txt</a>
 </td>
 </tr>
 <tr class="totals">
@@ -218,7 +218,7 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.048</span></td>
+<span class="">00:00:00.031</span></td>
 <td>
 Totals
 </td>
@@ -229,7 +229,7 @@ Totals
 
 <div class="clear"></div>
 <div id="footer">
-<div class="left">Generated on 16/05/2014 18:34:19</div>
+<div class="left">Generated on 17/05/2014 04:54:33</div>
 <div class="right">JBehave &#169; 2003-2011</div>
 <div class="clear"></div>
 </div>
