Building site for 1.0-SNAPSHOT

--- a/jbehave/view/reports.html
+++ b/jbehave/view/reports.html
@@ -136,7 +136,7 @@
 <td>
 <span class="">00:00:00.001</span></td>
 <td>
-<a href="BeforeStories.stats.html">stats</a> |<a href="BeforeStories.html">html</a> |<a href="BeforeStories.xml.html">xml</a> |<a href="BeforeStories.txt.html">txt</a>
+<a href="BeforeStories.stats.html">stats</a> |<a href="BeforeStories.xml.html">xml</a> |<a href="BeforeStories.html">html</a> |<a href="BeforeStories.txt.html">txt</a>
 </td>
 </tr>
 <tr>
@@ -229,7 +229,7 @@ Totals
 
 <div class="clear"></div>
 <div id="footer">
-<div class="left">Generated on 17/05/2014 04:54:33</div>
+<div class="left">Generated on 17/05/2014 04:59:31</div>
 <div class="right">JBehave &#169; 2003-2011</div>
 <div class="clear"></div>
 </div>
