Building site for 1.0-SNAPSHOT

--- a/jbehave/view/jbehave.example.stack.StackSzenario.txt.html
+++ b/jbehave/view/jbehave.example.stack.StackSzenario.txt.html
@@ -17,7 +17,7 @@ Narrative:
 In order to in einem Java Programm einen Stapel von Dingen abarbeiten zu können
 As a Entwickler
 I want to Schnittstellen und Implementierungen aus Java direkt nutzen
-Damit ich nicht immer eine eigene Stackverwaltung bauen muss.
+Damit ich keine eigene Stackverwaltung bauen muss.
 Scenario: Grundlegende Stack Funktionen
 Gegeben sei ein leerer Stack.
 Wenn das Wort Java hinzugefügt wird
