--- a/jbehave/view/jbehave.example.stack.StackSzenario.xml.html
+++ b/jbehave/view/jbehave.example.stack.StackSzenario.xml.html
@@ -16,7 +16,7 @@
   <inOrderTo keyword="In order to">in einem Java Programm einen Stapel von Dingen abarbeiten zu k&#246;nnen</inOrderTo>
   <asA keyword="As a">Entwickler</asA>
   <iWantTo keyword="I want to">Schnittstellen und Implementierungen aus Java direkt nutzen
-Damit ich nicht immer eine eigene Stackverwaltung bauen muss.</iWantTo>
+Damit ich keine eigene Stackverwaltung bauen muss.</iWantTo>
 </narrative>
 <scenario keyword="Scenario:" title="Grundlegende Stack Funktionen">
 <step outcome="successful">Gegeben sei ein leerer Stack.</step>
