--- a/jbehave/view/reports.html
+++ b/jbehave/view/reports.html
@@ -94,7 +94,7 @@
 <td>
 <span class="">00:00:00.001</span></td>
 <td>
-<a href="AfterStories.stats.html">stats</a> |<a href="AfterStories.html">html</a> |<a href="AfterStories.xml.html">xml</a> |<a href="AfterStories.txt.html">txt</a>
+<a href="AfterStories.stats.html">stats</a> |<a href="AfterStories.xml.html">xml</a> |<a href="AfterStories.html">html</a> |<a href="AfterStories.txt.html">txt</a>
 </td>
 </tr>
 <tr>
@@ -134,7 +134,7 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.001</span></td>
+<span class="">00:00:00.008</span></td>
 <td>
 <a href="BeforeStories.stats.html">stats</a> |<a href="BeforeStories.xml.html">xml</a> |<a href="BeforeStories.html">html</a> |<a href="BeforeStories.txt.html">txt</a>
 </td>
@@ -176,7 +176,7 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.029</span></td>
+<span class="">00:00:00.032</span></td>
 <td>
 <a href="jbehave.example.stack.StackSzenario.stats.html">stats</a> |<a href="jbehave.example.stack.StackSzenario.xml.html">xml</a> |<a href="jbehave.example.stack.StackSzenario.html">html</a> |<a href="jbehave.example.stack.StackSzenario.txt.html">txt</a>
 </td>
@@ -218,7 +218,7 @@
 <td>
 0</td>
 <td>
-<span class="">00:00:00.031</span></td>
+<span class="">00:00:00.041</span></td>
 <td>
 Totals
 </td>
@@ -229,7 +229,7 @@ Totals
 
 <div class="clear"></div>
 <div id="footer">
-<div class="left">Generated on 17/05/2014 04:59:31</div>
+<div class="left">Generated on 17/05/2014 05:00:22</div>
 <div class="right">JBehave &#169; 2003-2011</div>
 <div class="clear"></div>
 </div>
