Building site for 1.0-SNAPSHOT

--- a/jbehave/view/jbehave.example.stack.StackSzenario.txt.html
+++ b/jbehave/view/jbehave.example.stack.StackSzenario.txt.html
@@ -18,20 +18,39 @@ In order to in einem Java Programm einen Stapel von Dingen abarbeiten zu können
 As a Entwickler
 I want to Schnittstellen und Implementierungen aus Java direkt nutzen
 Damit ich keine eigene Stackverwaltung bauen muss.
+Scenario: Leerer Stack
+Gegeben sei ein leerer Stack.
+Wenn keine Operation auf dem Stack ausgeführt wird
+Dann enthält der Stack 0 Elemente.
+
+Scenario: Ein Elementiger Stack
+Gegeben sei ein leerer Stack.
+Wenn das Element 0 hinzugefügt wird
+Dann enthält der Stack 1 Element.
+
 Scenario: Grundlegende Stack Funktionen
 Gegeben sei ein leerer Stack.
-Wenn das Wort Java hinzugefügt wird
-Und das Wort C++ hinzugefügt wird
+Wenn das Element Java hinzugefügt wird
+Und das Element 7 hinzugefügt wird
 Wenn das oberste Element vom Stack entfernt wird
-Dann liegt das Wort Java ganz oben auf dem Stack.
+Dann liegt das Element Java ganz oben auf dem Stack.
 
 Scenario: Stack Suche
 Gegeben sei ein leerer Stack.
-Wenn das Wort Java hinzugefügt wird
-Und das Wort C++ hinzugefügt wird
-Wenn das Wort PHP hinzugefügt wird
-Und das Wort Java gesucht wird
+Wenn das Element Java hinzugefügt wird
+Und das Element C++ hinzugefügt wird
+Wenn das Element PHP hinzugefügt wird
+Und das Element Java gesucht wird
 Dann ist die erwartete Position 3.
+
+Scenario: Stack Suche doppelter Eintrag
+Gegeben sei ein leerer Stack.
+Wenn das Element Java hinzugefügt wird
+Und das Element C++ hinzugefügt wird
+Wenn das Element Java hinzugefügt wird
+Und das Element PHP hinzugefügt wird
+Wenn das Element Java gesucht wird
+Dann ist die erwartete Position 2.
 
 
 
